test/gen/err0001.go2
// errorcheck

// Copyright 2020 The Go Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

package p

func F1(type T comparable)() {}
func F2() { F1([]int)() } // ERROR "\[\]int does not satisfy comparable"
